--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="flex-container">
     <h1>Rock Paper Scissors</h1>
+    <button onClick="game()">Play Game</button>
   </div>
   <script src="index.js"></script>
 </body>
