add a 'play new game' button text change

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <div class="flex-container">
     <h1>Rock Paper Scissors</h1>
     <button onClick="game()">Play Game</button>
+    <p>This game is played in the console. On Mac press
+      command + option + J
+    </p>
   </div>
   <script src="index.js"></script>
 </body>
