added rps buttons and event listener that calls playRound func

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
   <div class="flex-container">
     <h1>Rock Paper Scissors</h1>
-    <button onClick="game()">Play Game</button>
-    <p>This game is played in the console. On Mac press
+    <!-- <button onClick="game()">Play Game</button> -->
+    <!-- <p>This game is played in the console. On Mac press
       command + option + J
-    </p>
+    </p> -->
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
   </div>
   <script src="index.js"></script>
 </body>
