added images to project folder

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
     <!-- <p>This game is played in the console. On Mac press
       command + option + J
     </p> -->
-    <button id="rock">Rock</button>
+    <!-- <button id="rock">Rock</button>
     <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <button id="scissors">Scissors</button> -->
+    <div class="score">
+      <h1 class="ties">Ties: 0</h1>
+    </div>
+    <div class="winnerDiv">
+      <h1 class="winner"></h1>
+      <button class="reset" onClick="resetGame()">Play Again?</button>
+    </div>
   </div>
   <script src="index.js"></script>
 </body>
