--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="flex-container">
-    <h1>Rock Paper Scissors</h1>
-    <!-- <button onClick="game()">Play Game</button> -->
-    <!-- <p>This game is played in the console. On Mac press
-      command + option + J
-    </p> -->
-    <!-- <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button> -->
-    <div class="score">
-      <h1 class="ties">Ties: 0</h1>
-    </div>
-    <div class="winnerDiv">
-      <h1 class="winner"></h1>
-      <button class="reset" onClick="resetGame()">Play Again?</button>
+  <div class="score">
+    <h1 class="ties">Ties: 0</h1>
+  </div>
+  <div class="winnerDiv">
+    <h1 class="winner"></h1>
+    <button class="reset" onClick="resetGame()">Play Again?</button>
+  </div>
+  <div class="playerSection">
+    <h3 class="playerChoice"></h3>
+    <h3 class="playerScore">Score: 0</h3>
+    <div class="playerImg">
+      <img src="./images/rock.png" alt="Rock" class="pImg" id="rock">
+      <img src="./images/paper.png" alt="Paper" class="pImg" id="paper">
+      <img src="./images/scissors.png" alt="Scissors" class="pImg" id="scissors">
     </div>
   </div>
-  <script src="index.js"></script>
+  <div class="computerSection">
+    <h3 class="computerChoice"></h3>
+    <h3 class="computerScore">Score: 0</h3>
+    <div class="computerImg">
+      <img src="./images/rock.png" alt="Rock" class="rock">
+      <img src="./images/paper.png" alt="Paper" class="paper">
+      <img src="./images/scissors.png" alt="Scissors" class="scissors">
+    </div>
+  </div>
 </body>
+<script src="index.js"></script>
 </html>
